--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div id="app"></div>
+    <div id="root"></div>
     <script type="module" src="Index.js"></script>
 </body>
 </html>
